refactor project, now accept array of various status.
